# TSP_Gen

./: .gitignore  erros.txt  iterate_code.sh  iterate_code.txt  makefile  pyproject.toml  readme.txt  tspg_par_ff.cpp  tspg_par_ff_wromg.cpp  tspg_par_native.cpp  tspg_par_native_dyn.cpp  tspg_par_native_stat.cpp  tspg_seq.cpp
cmd/: download_data.sh  main.txt
results/: Times.txt
results/canada/: time_dyn.txt  time_dyn_1024.txt  time_dyn_4096.txt  time_ff.txt  time_ff_1024.txt  time_ff_4096.txt  time_seq.txt  time_seq_1024.txt  time_seq_1024_stats.txt  time_seq_4096.txt  time_seq_4096_stats.txt  time_stat.txt  time_stat_1024.txt  time_stat_4096.txt  time_test.txt
results/djibouti/: time_dyn_cs_16.txt  time_dyn_cs_2.txt  time_dyn_cs_32.txt  time_dyn_cs_4.txt  time_dyn_cs_64.txt  time_dyn_cs_8.txt  time_seq.txt
results/italy/: time_dyn.txt  time_ff.txt  time_seq.txt  time_stat.txt
results/luxembourg/: time_dyn.txt  time_ff.txt  time_seq.txt  time_stat.txt
results/qatar/: time_dyn_4096.txt  time_dyn_cs_16.txt  time_dyn_cs_2.txt  time_dyn_cs_32.txt  time_dyn_cs_4.txt  time_dyn_cs_64.txt  time_dyn_cs_8.txt
results2/canada/: time_dyn_1024.txt  time_dyn_4096.txt  (+6 more)
sh/: copy_res_local.txt  download_data.sh  it_ff.txt  iterate_code_cn.txt  iterate_code_it.txt  iterate_code_lx.txt  project.txt  run.sh  tests.txt  threestates.sh
src/: distancefuncs.cpp  distancefuncs.hpp  genetic.cpp  geneticfuncs.cpp  geneticfuncs.hpp  utilfuncs.cpp  utilfuncs.hpp
utils/: argument_parser.hpp  argumentparser.hpp  download_data.sh  genetictimer.hpp  plotting.py  utimer.hpp
(+3 files in other folders)
