[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Andrea Roncoli <115221482+DreRnc@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
